# llvm

./: .add.dot  .gitignore  .isPrime.dot  .main.dot  Makefile  README.md  callgraph.cpp  main.cpp  newpass.sh  output  pass.cpp  pass.sh  prime.c  prime.ll  recursion.cpp  run.sh  test  test.c  test.ll  test_o3  test_o3.ll
.cache/clangd/index/: HelloWorld.cpp.1BFE3FFBC4CB6B48.idx  MultiplicationShifts.cpp.357E2377C5F75B77.idx
LVN/: CMakeLists.txt  README.md  constantprop.cpp  main.cpp  test.ll
MultiplicationShifts/: CMakeLists.txt  README.md  main.cpp
MultiplicationShifts/.cache/clangd/index/: main.cpp.7F60170BD022A3BE.idx
deadcode/: CMakeLists.txt  README.md  main.cpp
deadcode/.cache/clangd/index/: main.cpp.06E671DCED16D3BE.idx
eredloads/: CMakeLists.txt  main.cpp
liveness/: CMakeLists.txt  main.cpp
llvm-analysis/: deadcode.cpp
opcode/: CMakeLists.txt  main.cpp
opcode/.cache/clangd/index/: main.cpp.5A3ED03D09CB7DD5.idx
pass/: CMakeLists.txt  bench.sh  output.ll  pass.cpp  run.sh  test.c  test.ll
pass/.cache/clangd/index/: pass.cpp.BE43E271D02DBC5E.idx
sec-analysis/: CMakeLists.txt  README  README.md  main.cpp
